--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="contact-links">
       <a class="footer-link" href="https://www.instagram.com/shujaurrahman_/">Instagram</a>
       <a class="footer-link" href="https://twitter.com/shujaurrehman21">Twitter</a>
-      <a class="footer-link" href="https://rahmansahab210.blogspot.com/">Website</a>
+      <a class="footer-link" href="https://rahmansahab210.blogspot.com/">Personal Blog</a>
       <p class="copyright">© 2021 Shuja ur Rahman.</p>
       </div>
     </div>
