--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <div class="skill-row">
           <img class="computer" src="images/computer.png" alt="computer-img">
           <h3>Tech Analyst</h3>
-          <p>I am tech geek from early age over years my experience with technology have grapsed ,developed my experience to deal with technical stuff.
-            I also a have a youtube channel- <a class="links" href="https://www.youtube.com/Techdotricks">Tech do.</a> Here i sought of help people with technical stuff.</p>
+          <p>I am tech geek from early age over years my experience with technology has ,developed my mind and heart to deal and love technical stuff.
+            I also a have a youtube channel- <a class="links" href="https://www.youtube.com/Techdotricks">Tech do.</a> Here i sought of make techy videos and videos of things and stuff i learn or love.  </p>
         </div>
         <div class="skill-row">
           <img class="book" src="https://media0.giphy.com/media/VDdh2wgmzsXAc7FCd7/200w.webp?cid=ecf05e47a7itc5z82stb3va088pmn6ciyn6mxgobyi5l5tzq&rid=200w.webp" alt="book-img">
           <h3>Book geek</h3>
-          <p >But my main skill is i can finish a literary or fictional book in hours. I love reading fiction and thrillers.</p>
+          <p >But my main skill is i can finish a literary or fictional book in hours. I love reading fiction and thrillers. kind of boring but i find peace to spend time books.</p>
         </div>
       </div>
       <hr>
