--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img class="profile-photo" src="images/SHUJA.png" alt="shuja's image">
         <h2 class="profile-text">Hello.</h2> 
         <p class="intro">I am an aspiring web developer and a student of  <a class="links" href="www.amu.ac.in">Aligarh Muslim University</a>.<br> 
-           I am founder of <a class="links" href="https://rahmansahab210.blogspot.com/">speaking word</a> a literary web blog.</p>
+           I also have <a class="links" href="https://rahmansahab210.blogspot.com/">speaking word</a> a literary web blog. Do visit if you find some time for reading my stuff.</p>
       </div>
       <hr>
       <div class="skills">
