--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="skill-row">
           <img class="book" src="https://media0.giphy.com/media/VDdh2wgmzsXAc7FCd7/200w.webp?cid=ecf05e47a7itc5z82stb3va088pmn6ciyn6mxgobyi5l5tzq&rid=200w.webp" alt="book-img">
           <h3>Book geek</h3>
-          <p >But my main skill is i can finish a literary or fictional book in hours. I love reading fiction and thrillers. kind of boring but i find peace to spend time books.</p>
+          <p >But my main skill is i can finish a literary or fictional book in hours. I love reading fiction and thrillers. kind of boring but i find peace to spend time with books.</p>
         </div>
       </div>
       <hr>
